--- a/scss/main.scss
+++ b/scss/main.scss
@@ -86,24 +86,36 @@ body {
         color: $Light-Mode-Text;
       }
 
-      #search-box {
-        border: none;
-        outline: none;
+      #search-box-container {
+        display: flex;
+        align-items: center;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         border-radius: 5px;
-        height: 3rem;
         width: 25rem;
-        padding: 0 8rem 0 2rem;
-        font-family: 'Font Awesome 5 Free' !important;
-        font-weight: 900;
-        font-size: 16px;
+        padding: 0 2rem;
+        background-color: $Dark-Mode-Text-Light-Mode-Elements;
 
         &.dark {
           background: $Dark-Mode-Elements;
-          color: $Dark-Mode-Text-Light-Mode-Elements;
+        }
 
-          input::placeholder {
+        #search-box {
+          border: none;
+          outline: none;
+          border-radius: 5px;
+          height: 3rem;
+          padding-left: 2rem;
+          font-weight: 700;
+          font-size: 16px;
+          width: 100%;
+
+          &.dark {
+            background: $Dark-Mode-Elements;
             color: $Dark-Mode-Text-Light-Mode-Elements;
+
+            input::placeholder {
+              color: $Dark-Mode-Text-Light-Mode-Elements;
+            }
           }
         }
       }
